--- a/btop/.config/btop/btop.conf
+++ b/btop/.config/btop/btop.conf
@@ -1,4 +1,4 @@
-#? Config file for btop v. 1.2.5
+#? Config file for btop v. 1.2.6
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
@@ -57,7 +57,7 @@ update_ms = 2000
 proc_sorting = "user"
 
 #* Reverse sorting order, True or False.
-proc_reversed = False
+proc_reversed = True
 
 #* Show processes as a tree.
 proc_tree = False
