add tmux navigator and fix 256 colors for nvim

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Set true color
-set-option -sa terminal-overrides ",xterm*:Tc"
+set -ga terminal-overrides ",st-256color"
 
 #unbind C-b
 #set -g prefix C-Space
@@ -11,7 +11,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # change binding in nvim first
 # bind -n M-H previous-window
 # bind -n M-L next-window
-#set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
